# rpom

./: .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
benchmarks/: rpom_bench_catalog_fast_high_load.yml  rpom_bench_catalog_high_load.yml  rpom_bench_catalog_simple.yml  rpom_bench_complex.yml
doc/: Load Test rpom.jmx
migrations/2018-07-01-095832_create_orders/: up.sql
migrations/2018-08-18-085515_create_specifications/: up.sql
migrations/2018-08-18-091426_create_products/: up.sql
migrations/2018-08-18-093351_create_product_orders/: down.sql  up.sql
migrations/2018-09-19-204139_create_orders/: up.sql
src/: db_pool.rs  main.rs  opf.rs  order.rs  product.rs  schema.rs  specification.rs
storage/: pom.db
