[package]
name = "rpom"
version = "0.1.0"
authors = ["humb1t <humb1t@yandex.ru>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0.68"
serde_json = "1.0.22"
serde_derive = "1.0.68"
diesel = { version = "1.3.2", features = ["sqlite", "r2d2"] }
dotenv = "0.13.0"
libsqlite3-sys = { version =  "0.9.1", features = ["bundled"] }
