[package]
name = "rpom"
version = "0.1.0"
authors = ["humb1t <humb1t@yandex.ru>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0.68"
serde_json = "1.0.22"
serde_derive = "1.0.68"
diesel = { version = "1.3", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.13.0"
postgres = "0.15.2"
